Cleaned layouts using bootstrap cards

--- a/src/app/client-create/client-create.component.html
+++ b/src/app/client-create/client-create.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="section actions">
-        <button type="submit" class="btn btn-primary" [disabled]="!clientFormGroup.valid">Create Client</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!clientFormGroup.valid">Save Client</button>
         <button class="btn btn-light" [routerLink]="['/clients']">Cancel</button>
       </div>
     </div>
