--- a/src/app/client/client-detail.component.css
+++ b/src/app/client/client-detail.component.css
@@ -1,18 +1,40 @@
-ul {
-    padding:0;
-    width: 1200px;
-    margin: 20px auto
+.btn-light {
+    /* tweaking the default Bootstrap style */
+    background-color: #87bbf0;
 }
-li {
-    display: inline
+
+@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+    }
 }
+
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3;
+    }
+}
+
+@media (min-width: 992px) {
+    .card-columns {
+        column-count: 4;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 5;
+    }
+}
+
+
 .tn {
     margin: 6px;
     border: 4px solid #eee;
     box-shadow: #555 1px 1px 8px 1px;
 }
 
-.btn-light {
-    /* tweaking the default Bootstrap style */
-    background-color: #87bbf0;
+
+.clientDetail {
+    padding-left: 15px;
 }
