--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+/* lists for both the clients and projects */
 ul {
     padding:0;
     /*width: 1200px;*/
@@ -6,14 +7,31 @@ ul {
 li {
     display: inline
 }
-.tn {
+
+/* layout the project cards and details */
+.projectThumbnail {
     margin: 6px;
     border: 4px solid #eee;
     box-shadow: #555 1px 1px 8px 1px;
 }
 
-/* for some reason, bootstrap default widths are for 4 cols only 
-.col-lg-6, .col-md-8, .col-sm-10, .col-xs-10{
-    flex: 0 0 100%;
-    min-width: 100%;
-}*/
+/* layout the client card and details */
+.clientCard {
+    margin: 6px;
+    border: 4px solid #eee;
+    box-shadow: #555 1px 1px 8px 1px;
+    margin-bottom: 20px;
+    padding: 10px;
+    height: 160px;
+}
+.clientName {
+    cursor: pointer;
+}
+.clientDetail {
+    padding-left: 15px;
+}
+
+.btn-light {
+    /* tweaking the default Bootstrap style */
+    background-color: #87bbf0;
+}
