--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,37 +1,38 @@
 <div class="row">
-    <div class="col col-lg-4 col-md-6 col-sm-6 col-xs-10">
+    <div class="col col-lg-6 col-md-6 col-sm-6 col-xs-10">
         <div class="section">
             <div class="sectionTitle">Recent Clients</div>
             <ul id="thumbnailsList">
                 <li *ngFor="let client of clients?.items">
-                    <div class="clientCard">
-                        <div [routerLink]="['/client', client.sys.id]">
-                            <h5>{{ client.fields.name }}</h5>
-                        </div>
+                    <div [routerLink]="['/client', client.sys.id]">
+                        <div class="clientCard">
+                        <h5>{{ client.fields.name }}</h5>
                         <div *ngIf="client.fields.email" class="clientDetail">{{ client.fields.email }}</div>
                         <div *ngIf="client.fields.phone" class="clientDetail">{{ client.fields.phone }}</div>
                     </div>
+                </div>
                 </li>
             </ul>
         </div>
     </div>
 
-    <div class="col col-lg-8 col-md-6 col-sm-6 col-xs-10">
+    <div class="col col-lg-6 col-md-6 col-sm-6 col-xs-10">
         <div class="section">
             <div class="sectionTitle">Recent Projects</div>
             <ul id="thumbnailsList">
                 <li *ngFor="let project of projects?.items">
                     <!-- the routerLink bind results in a URL path like "/project/3" where 3 is the id value for the client of the *ngFor directive -->
-                    <a [routerLink]="['/project', project.sys.id]">
+                    <div [routerLink]="['/project', project.sys.id]">
+                        <span style="display: none;">hidden</span>
                         <span *ngIf="project.fields.finalImage; else inProgressBlock">
-                            <img src="{{project.fields.finalImage.fields.file.url}}" class="tn" width="200" height="160">
+                            <img src="{{project.fields.finalImage.fields.file.url}}" class="projectThumbnail" width="200" height="160">
                         </span>
                         <ng-template #inProgressBlock>
                             <span>
-                                <img src="{{project.fields.assets[0].fields.file.url}}" class="tn" width="200" height="160">
+                                <img src="{{project.fields.assets[0].fields.file.url}}" class="projectThumbnail" width="200" height="160">
                             </span>
                         </ng-template>
-                    </a>
+                    </div>
                 </li>
             </ul>
         </div>
