--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,19 +1,28 @@
-ul {
-    padding:0;
-    /*width: 1200px;*/
-    margin: 20px auto
-}
-li {
-    display: inline
-}
-.tn {
-    margin: 6px;
-    border: 4px solid #eee;
-    box-shadow: #555 1px 1px 8px 1px;
+.btn-light {
+    /* tweaking the default Bootstrap style */
+    background-color: #87bbf0;
 }
 
-/* for some reason, bootstrap default widths are for 4 cols only */
-.col-lg-6, .col-md-8, .col-sm-10, .col-xs-10{
-    flex: 0 0 100%;
-    min-width: 100%;
+@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3;
+    }
+}
+
+@media (min-width: 992px) {
+    .card-columns {
+        column-count: 4;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 5;
+    }
 }
