--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,22 +1,56 @@
 <div class="row">
-    <div class="col col-lg-6 col-md-8 col-sm-10 col-xs-10">
-        <div class="section">
-            <div class="sectionTitle">Projects</div>
-            <ul id="thumbnailsList">
-                <li *ngFor="let project of projects.items">
-                    <!-- the routerLink bind results in a URL path like "/project/3" where 3 is the id value for the client of the *ngFor directive -->
-                    <a [routerLink]="['/project', project.sys.id]">
-                        <span *ngIf="project.fields.finalImage; else inProgressBlock">
-                            <img src="{{project.fields.finalImage.fields.file.url}}" class="tn" width="200" height="160">
-                        </span>
-                        <ng-template #inProgressBlock>
-                            <span>
-                                <img src="{{project.fields.assets[0].fields.file.url}}" class="tn" width="200" height="160">
-                            </span>
-                        </ng-template>
-                    </a>
-                </li>
-            </ul>
+    <div class="col">
+        <div class="sectionTitle">Projects</div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col card-columns">
+        <div *ngFor="let project of projects?.items">
+            <div class="card" *ngIf="project.fields.finalImage; else inProgressBlock">
+                <img class="card-img-top img-responsive" src="{{project.fields.finalImage.fields.file.url}}" alt="{{project.fields.title}}">
+                <div class="card-body">
+                    <a [routerLink]="['/project', project.sys.id]" class="btn btn-primary">{{project.fields.title}}</a>
+                    <p class="card-text">{{project.fields.style}} - {{project.fields.description}}</p>
+                    <div class="card-text">
+                        <small class="text-muted">{{project.fields.status}}</small>
+                    </div>
+                </div>
+            </div>
+
+            <ng-template #inProgressBlock>
+                <div class="card" *ngIf="project.fields.assets; else noImage">
+                    <img class="card-img-top img-responsive" src="{{project.fields.assets[0].fields.file.url}}" alt="{{project.fields.title}}">
+                    <div class="card-body">
+                        <a [routerLink]="['/project', project.sys.id]" class="btn btn-primary">{{project.fields.title}}</a>
+                        <h5 class="card-title">{{project.fields.title}}</h5>
+                        <p class="card-text">{{project.fields.style}} - {{project.fields.description}}</p>
+                        <div class="card-text">
+                            <small class="text-muted">{{project.fields.status}}</small>
+                        </div>
+                    </div>
+                </div>
+            </ng-template>
+
+            <ng-template #noImage>
+                <div class="card">
+                    <img class="card-img-top img-responsive" src="https://via.placeholder.com//200x100?text=No+image+yet" alt="{{project.fields.title}}">
+                    <div class="card-body">
+                        <a [routerLink]="['/project', project.sys.id]" class="btn btn-primary">{{project.fields.title}}</a>
+                        <p class="card-text">{{project.fields.style}} - {{project.fields.description}}</p>
+                        <div class="card-text">
+                            <small class="text-muted">{{project.fields.status}}</small>
+                        </div>
+                    </div>
+                </div>
+            </ng-template>
         </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <button *ngIf="skip > 0" (click)="prevPage();" class="btn btn-light">Previous</button>
+        <button *ngIf="(skip + limit) <= total" (click)="nextPage();" class="btn btn-light">Next</button>
     </div>
 </div>
